<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/checkboxes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="3"
        tools:context=".GridXMLActivity" >


        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/left_turn"
            android:background="@android:color/transparent"
            android:layout_margin="5dp"
            android:layout_column="0"
            android:layout_row="0"
            android:id="@+id/leftTurnButton"
            android:contentDescription="@string/turnleft" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/left_arrow"
            android:background="@android:color/transparent"
            android:layout_margin="5dp"
            android:layout_column="0"
            android:layout_row="1"
            android:id="@+id/leftButton"
            android:contentDescription="@string/left" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/left_turn"
            android:background="@android:color/transparent"
            android:layout_margin="5dp"
            android:scaleX="-1"
            android:layout_column="2"
            android:layout_row="0"
            android:id="@+id/rightTurnButton"
            android:contentDescription="@string/turnright" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/left_arrow"
            android:background="@android:color/transparent"
            android:layout_margin="5dp"
            android:rotation="180"
            android:layout_column="2"
            android:layout_row="1"
            android:id="@+id/rightButton"
            android:contentDescription="@string/right" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/left_arrow"
            android:background="@android:color/transparent"
            android:layout_margin="5dp"
            android:rotation="90"
            android:layout_column="1"
            android:layout_row="0"
            android:id="@+id/upButton"
            android:contentDescription="@string/up" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/left_arrow"
            android:background="@android:color/transparent"
            android:layout_margin="5dp"
            android:rotation="270"
            android:layout_column="1"
            android:layout_row="2"
            android:id="@+id/downButton"
            android:contentDescription="@string/down" />
    </GridLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speed_100"
        android:textSize="20sp"
        android:id="@+id/speedTextWalk"/>

    <SeekBar
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="100"
        android:id="@+id/seekBarSpeedWalk"/>

</LinearLayout>