<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_weight="0.1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/say"
            android:textSize="20sp"/>

        <EditText
            android:layout_weight="0.9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:id="@+id/sayText" />
    </LinearLayout>


    <Button
        android:theme="@style/AppTheme.Button"
        android:layout_margin="50dp"
        android:text="@string/say"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/sayButton"/>


    <!--Volume 0 - 100 -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volume_100"
        android:textSize="20sp"
        android:id="@+id/volumeText"/>

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:max="100"
        android:progress="100"
        android:id="@+id/seekBarVolume"/>

    <!--Speed 50 - 400 -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speed_100"
        android:textSize="20sp"
        android:id="@+id/speedText"/>

    <SeekBar
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="350"
        android:progress="50"
        android:id="@+id/seekBarSpeed"/>

    <!--Pitch 50 - 200 -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pitch_100"
        android:textSize="20sp"
        android:id="@+id/pitchText"/>

    <SeekBar
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="150"
        android:progress="50"
        android:id="@+id/seekBarPitch"/>

</LinearLayout>
