<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <TableLayout
        android:id="@+id/movesTableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:gravity="center">
            <android.support.percent.PercentRelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="10dp">
                <Button
                    android:theme="@style/AppTheme.Button"
                    android:text="@string/stand"
                    app:layout_widthPercent="100%"
                    app:layout_aspectRatio="100%"
                    android:id="@+id/standButton"/>
            </android.support.percent.PercentRelativeLayout>

            <android.support.percent.PercentRelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="10dp">
                <Button
                    android:theme="@style/AppTheme.Button"
                    android:text="@string/sit"
                    app:layout_widthPercent="100%"
                    app:layout_aspectRatio="100%"
                    android:id="@+id/sitButton"/>
            </android.support.percent.PercentRelativeLayout>
        </TableRow>
        <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:gravity="center">
            <android.support.percent.PercentRelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="10dp">
                <Button
                    android:theme="@style/AppTheme.Button"
                    android:text="@string/wave"
                    app:layout_widthPercent="100%"
                    app:layout_aspectRatio="100%"
                    android:id="@+id/waveButton" />
            </android.support.percent.PercentRelativeLayout>

            <android.support.percent.PercentRelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="10dp">
                <Button
                    android:theme="@style/AppTheme.Button"
                    android:text="@string/guitar"
                    app:layout_widthPercent="100%"
                    app:layout_aspectRatio="100%"
                    android:id="@+id/guitarButton" />
            </android.support.percent.PercentRelativeLayout>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:gravity="center" >
            <android.support.percent.PercentRelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="10dp">
                <Button
                    android:theme="@style/AppTheme.Button"
                    android:text="@string/robot"
                    app:layout_widthPercent="100%"
                    app:layout_aspectRatio="100%"
                    android:id="@+id/robotButton" />
            </android.support.percent.PercentRelativeLayout>
            <android.support.percent.PercentRelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="10dp">
                <Button
                    android:theme="@style/AppTheme.Button"
                    android:text="@string/kick"
                    app:layout_widthPercent="100%"
                    app:layout_aspectRatio="100%"
                    android:id="@+id/kickButton" />
            </android.support.percent.PercentRelativeLayout>
        </TableRow>
    </TableLayout>

</ScrollView>